# SushiEngine

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Doxyfile  LICENCE  README.md
audio/: CMakeLists.txt
audio/sdl/: sdl_audio_device.cpp  sdl_audio_device.hpp
cli/: config.toml  pyproject.toml  sushistack.deps.toml
cli/sushiengine/: __init__.py  __main__.py  cli.py  config.py  console.py  env.py
cli/sushiengine/services/: __init__.py  audio.py  diag.py  discovery.py  docker.py  editor.py  project.py  render.py
editor/: CMakeLists.txt  camera_controller.hpp  command_history.cpp  command_history.hpp  editor_context.hpp  editor_panels.cpp  editor_panels.hpp  fly_camera.hpp  gizmo_controller.cpp  gizmo_controller.hpp  imgui_backend.cpp  imgui_backend.hpp  input_state.hpp  main.cpp  platform_window.hpp  preferences.cpp  preferences.hpp  scene_camera.hpp  scene_model.hpp  scene_serializer.cpp  scene_serializer.hpp  sdl_window.cpp  sdl_window.hpp  viewport_panel.cpp  viewport_panel.hpp
editor/animation/: animation_panel.cpp  animation_panel.hpp  animator_graph_panel.cpp  animator_graph_panel.hpp  skeleton_debug_draw.cpp  skeleton_debug_draw.hpp
editor/camera/: camera_controller.hpp  fly_camera.hpp  scene_camera.hpp
editor/core/: command_history.cpp  command_history.hpp  editor_context.hpp  preferences.cpp  preferences.hpp
editor/gizmo/: gizmo_controller.cpp  gizmo_controller.hpp
editor/input/: editor_contexts.hpp  input_state.hpp
editor/serialization/: scene_serializer.cpp  scene_serializer.hpp
editor/ui/: editor_panels.cpp  editor_panels.hpp  imgui_backend.cpp  imgui_backend.hpp  material_inspector.cpp  material_inspector.hpp  viewport_panel.cpp  viewport_panel.hpp
editor/vfx/: effect_preview.cpp  effect_preview.hpp
editor/window/: platform_window.hpp  sdl_window.cpp  sdl_window.hpp
input/: CMakeLists.txt
input/sdl/: sdl_input_translator.cpp  sdl_input_translator.hpp
render/: CMakeLists.txt  shader_catalogue.cpp  shader_catalogue.hpp
render/frame/: frame_context.hpp  quality.cpp  resolution_controller.cpp  resolution_controller.hpp  temporal_jitter.cpp  temporal_jitter.hpp  upscaler.cpp  upscaler.hpp
render/geometry/: cloth_buffers.cpp  cloth_buffers.hpp  mesh_registry.cpp  mesh_registry.hpp  meshlet.cpp  meshlet.hpp
render/gi/: environment_probe_tracer.cpp  environment_probe_tracer.hpp  mesh_sdf_baker.cpp  mesh_sdf_baker.hpp  probe_volume.cpp  probe_volume.hpp  sdf_clipmap.cpp  sdf_clipmap.hpp  sdf_probe_tracer.cpp  sdf_probe_tracer.hpp  tracer.hpp
render/graph/: gpu_profiler.cpp  gpu_profiler.hpp  render_graph.cpp  render_graph.hpp  resource_handle.hpp  resource_state.cpp  resource_state.hpp
render/interop/: vulkan_interop_buffer.cpp
render/lighting/: cluster_config.hpp  light_system.cpp  light_system.hpp
render/material/: asset_library.cpp  asset_library.hpp  gltf_animation_importer.cpp  gltf_importer.cpp  gltf_importer.hpp  gltf_skeleton_importer.cpp  material_system.cpp  material_system.hpp  stb_impl.cpp  texture_library.cpp  texture_library.hpp
render/passes/: atmosphere_lut_pass.cpp  atmosphere_lut_pass.hpp  auto_exposure_pass.cpp  auto_exposure_pass.hpp  bloom_pass.cpp  bloom_pass.hpp  cloth_pass.cpp  cloth_pass.hpp  cloud_composite_pass.cpp  cloud_composite_pass.hpp  cloud_pass.cpp  cloud_pass.hpp  contact_shadow_pass.cpp  contact_shadow_pass.hpp  cull_pass.cpp  cull_pass.hpp  depth_only.cpp  depth_only.hpp  depth_prepass.cpp  depth_prepass.hpp  dof_pass.cpp  dof_pass.hpp  fullscreen.cpp  fullscreen.hpp  fxaa_pass.cpp  fxaa_pass.hpp  grid_pass.cpp  grid_pass.hpp  ground_shadow_resolve_pass.cpp  ground_shadow_resolve_pass.hpp  gtao_pass.cpp  gtao_pass.hpp  hiz_pass.cpp  hiz_pass.hpp  ibl_pass.cpp  ibl_pass.hpp  irradiance_volume_pass.cpp  irradiance_volume_pass.hpp  light_cull_pass.cpp  light_cull_pass.hpp  (+35 more)
render/probe/: main.cpp
render/raytracing/: scene_accelerator.cpp  scene_accelerator.hpp
render/resources/: descriptor_allocator.cpp  descriptor_allocator.hpp  descriptor_heap.cpp  descriptor_heap.hpp  descriptor_writer.hpp  glsl_includer.hpp  pipeline_cache.cpp  pipeline_cache.hpp  pipeline_handle.hpp  sampler_cache.cpp  sampler_cache.hpp  shader_library.cpp  shader_library.hpp  transient_pool.cpp  transient_pool.hpp
render/rhi/vulkan/: view_resources.cpp  view_resources.hpp  vma_impl.cpp  vulkan_check.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_offscreen.cpp  vulkan_offscreen.hpp  vulkan_scene_view.cpp  vulkan_scene_view.hpp  vulkan_window_renderer.cpp  vulkan_window_renderer.hpp
render/scene/: gpu_instance.hpp  instance_system.cpp  instance_system.hpp  motion_system.cpp  motion_system.hpp  particle_system.cpp  particle_system.hpp  post_process_uniforms.cpp  post_process_uniforms.hpp  scene_layout.cpp  scene_layout.hpp  scene_uniforms.cpp  scene_uniforms.hpp  shadow_uniforms.cpp  shadow_uniforms.hpp  skinning_system.cpp  skinning_system.hpp  temporal_uniforms.cpp  temporal_uniforms.hpp
render/shaders/: aerial_perspective.comp  atmosphere_common.glsl  bloom_down.comp  bloom_up.comp  blue_noise.glsl  brdf_lut.comp  cloth.comp  cloud.frag  cloud_composite.frag  cloud_noise_common.glsl  cloud_noise_volume.comp  cloud_noise_weather.comp  cloud_shadow_common.glsl  cluster_build.comp  clustered_lighting.glsl  contact_shadow.frag  cull.comp  dof.frag  fog_scatter.comp  fullscreen.vert  fxaa.frag  gi_common.glsl  gi_probe_relight.comp  grid.frag  ground_shadow_resolve.frag  gtao.comp  gtao_resolve.frag  hiz.comp  ibl_common.glsl  ibl_irradiance.comp  ibl_prefilter.comp  light_shadow.vert  line.frag  luminance_histogram.comp  mesh.frag  mesh.vert  mesh_gpu.vert  mesh_skinned.vert  meshlet.mesh  meshlet.task  (+33 more)
render/textures/: cloud_noise.cpp  cloud_noise.hpp
render/tools/shader_compiler/: main.cpp
sim/: CMakeLists.txt  runtime_simulation.cpp
tests/: CMakeLists.txt
tests/common/: test_helpers.hpp  test_main.cpp
tests/functional/integration/: test_app.cpp  test_astro_dynamics.cpp  test_cloth.cpp  test_deterministic_replay.cpp  test_ephemeris.cpp  test_input_determinism.cpp  test_ui.cpp  (+10 more)
(+235 files in other folders)
