[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sushiengine-cli"
version = "0.1.0"
description = "SushiEngine developer CLI (build / test / run)"
authors = [{ name = "Mustafa Garip", email = "mustafagarip@sushisystems.io" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
se = "sushiengine.cli:app"
sushiengine = "sushiengine.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["sushiengine*"]

[tool.setuptools.package-data]
sushiengine = ["py.typed"]
